# tiburon_trainees_2019

./: CMakeLists.txt  README.md  package.xml
include/tiburon_trainees_2019/task1/: node1.h  node2.h  node3.h
src/task1/: node1.cpp  node1_creator.cpp  node2.cpp  node2_creator.cpp  node3.cpp  node3_creator.cpp
